--- a/Logit.csproj
+++ b/Logit.csproj
@@ -2,9 +2,12 @@
 
 	<PropertyGroup>
 		<OutputType>Exe</OutputType>
-		<TargetFramework>net7.0</TargetFramework>
+		<TargetFramework>net6.0</TargetFramework>
 		<LangVersion>11</LangVersion>
 		<ImplicitUsings>true</ImplicitUsings>
+		<Nullable>enable</Nullable>
+		<TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+		
 	</PropertyGroup>
 
 	<ItemGroup>
